--- a/src/products.html
+++ b/src/products.html
@@ -108,8 +108,9 @@
                             <th>
                                 <input type="checkbox" class="select-all">
                             </th>
-                            <th>Product</th>
-                            <th>Status</th>
+                            <th>Image</th>
+                            <th>Name</th>
+                            <th>SKU</th>
                             <th>Inventory</th>
                             <th>Category</th>
                             <th>Price</th>
@@ -151,16 +152,11 @@
             <td>
                 <input type="checkbox" class="select-product">
             </td>
-            <td class="product-cell">
+            <td>
                 <img src="" alt="" class="product-thumbnail">
-                <div class="product-info">
-                    <div class="product-title"></div>
-                    <div class="product-id"></div>
-                </div>
             </td>
-            <td class="status-cell">
-                <span class="status-badge"></span>
-            </td>
+            <td class="product-title"></td>
+            <td class="product-id"></td>
             <td class="inventory-cell">
                 <span class="inventory-count"></span>
             </td>
@@ -176,6 +172,8 @@
             </td>
         </tr>
     </template>
+
+    <div id="product-details-modal"></div>
 
     <script src="js/products.js"></script>
 </body>
