--- a/src/categories.html
+++ b/src/categories.html
@@ -5,10 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Categories | Dashboard</title>
-    <link rel="stylesheet" href="../dist/assets/styles/main.css">
-    <link rel="stylesheet" href="../dist/assets/styles/categories.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="../dist/assets/styles/main.css">
 </head>
 
 <body>
@@ -53,33 +52,47 @@
         </aside>
 
         <main id="main-content">
-            <header>
-                <h1>Categories</h1>
-            </header>
-            <div class="dashboard-header">
-                <div class="search-bar">
-                    <i class="fas fa-search"></i>
-                    <input type="text" placeholder="Search categories...">
+            <div class="categories-header">
+                <div class="header-content">
+                    <h1>Categories</h1>
+                    <p class="text-muted">Manage your product categories</p>
                 </div>
             </div>
 
-            <div class="dashboard-grid">
-                <div class="categories-list">
-                    <h3>
-                        <i class="fas fa-tags"></i>
-                        Available Categories
-                    </h3>
-                    <!-- Kategorie będą dynamicznie dodane tutaj -->
-                    <div id="categories-container" class="categories-container">
-                        <!-- Tu zostaną wyświetlone kategorie -->
-                        <p>Loading categories...</p>
+            <div class="categories-toolbar">
+                <div class="toolbar-left">
+                    <div class="search-bar">
+                        <i class="fas fa-search"></i>
+                        <input type="text" placeholder="Search categories">
+                    </div>
+                </div>
+            </div>
+
+            <div class="categories-grid" id="categories-list">
+                <!-- Categories will be populated here -->
+            </div>
+
+            <!-- Category Products Modal -->
+            <div id="category-products-modal">
+                <div class="modal-overlay">
+                    <div class="modal-content">
+                        <button class="modal-close">
+                            <i class="fas fa-times"></i>
+                        </button>
+                        <div class="category-details">
+                            <div class="category-info">
+                                <h2 id="category-name"></h2>
+                                <div class="products-grid" id="category-products">
+                                    <!-- Products will be populated here -->
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </main>
     </div>
 
-    <!-- Dodaj skrypt JS -->
     <script src="js/categories.js"></script>
 </body>
 
